# dvdread-rs

./: Cargo.toml  README.md  build.rs  wrapper.h
.github/workflows/: rust.yml
src/: dvd_reader.rs  lib.rs
